# Estimate-AI

./: .replit  ACADEMIC_DOCUMENTATION.md  ACADEMIC_PROGRESS_REPORT.md  FRONTEND_AND_ML_SETUP.md  PROFESSIONAL_DOCUMENTATION.md  PROJECT_PROGRESS_REPORT.md  README.md  SETUP_GUIDE.md  advanced_ml_models.py  app.py  appreciation_analyzer.py  bangalore_properties.csv  data_processor.py  data_validator.py  database.py  database_only_app.py  delhi_properties.csv  fast_ml_model.py  fast_model_cache.pkl  frontend_only.py  generate_academic_pdf.py  generate_pdf_report.py  gurugram_properties.csv  init_database.py  investment_analyzer.py  live_data_scraper.py  main.py  market_analysis.py  ml_model.py  ml_models_demo.py  mumbai_properties.csv  noida_properties.csv  portfolio_analyzer.py  pyproject.toml  real_estate_chatbot.py  requirements.txt  robust_app_loader.py  setup.py  wireframes.md
.streamlit/: config.toml
attached_assets/: Pasted-ValueError-Unknown-format-code-f-for-object-of-type-str-Traceback-File-home-runner-workspace-1749736627174_1749736627176.txt
config/: settings.py
data/: bangalore_properties.csv  delhi_properties.csv  gurugram_properties.csv  mumbai_properties.csv  noida_properties.csv
docs/: API.md  DEPLOYMENT.md
src/: __init__.py  main.py
src/analyzers/: portfolio_analyzer.py
src/components/: real_estate_chatbot.py
src/models/: __init__.py
src/utils/: emi_calculator.py
tests/: test_models.py
