[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "beautifulsoup4>=4.13.4",
    "chromedriver-autoinstaller>=0.6.4",
    "joblib>=1.5.1",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.2",
]
